make corn tasks

--- a/.env
+++ b/.env
@@ -9,3 +9,8 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=root
 DB_DIALECT=postgres
+
+SMTP_HOST=smtp.yandex.ru
+SMTP_PORT=465
+SMTP_USER=KrokodilGena07@yandex.ru
+SMTP_PASSWORD=veuiwcitmgosnndg
